@startuml
skinparam monochrome true
skinparam StateFontName Helvetica
skinparam defaultFontName Monospaced
skinparam defaultFontStyle Bold
skinparam state {
    FontStyle Bold
}
state TrafficLightFSM {
[*] --> OFF
OFF --> RED : ON
RED --> GREEN : GO
RED --> RED : STOP
RED --> OFF : OFF
RED --> FLASHING_ON : FLASH
AMBER --> RED : <<timeout = {amberTimeout}>>
AMBER --> AMBER : STOP
AMBER --> OFF : OFF
GREEN --> AMBER : STOP
GREEN --> OFF : OFF
FLASHING_ON --> FLASHING_OFF : <<timeout = {flashingOnTimeout}>>
FLASHING_ON --> OFF : OFF
FLASHING_ON --> RED : STOP
FLASHING_OFF --> FLASHING_ON : <<timeout = {flashingOffTimeout}>>
FLASHING_OFF --> OFF : OFF
FLASHING_OFF --> RED : STOP
}
@enduml
